
name:                h-chu
version:             0.1.0.0
synopsis:            A telnet based haskell implementation of the card game Tichu.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Thomas Athorne
maintainer:          thomas.athorne@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable h-chu
  main-is:             Main.hs
  other-modules:       Client, 
                       Data, 
                       Game, 
                       GameState, 
                       HelpText, 
                       Interface,
                       NameGenerator, 
                       Player, 
                       Random, 
                       RoundEnd, 
                       Server
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       mtl ==2.1.*,
                       random ==1.0.*,
                       network ==2.4.*,
                       stm ==2.4.*,
                       async == 2.0.*
  hs-source-dirs:      src
  default-language:    Haskell2010